Add a note that the project is not maintained.

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
+THIS PROJECT IS JUST AN EXPERIMENT AND IS NOT SUPPORTED.
+YOU ARE ADVISED TO USE WICKET-6.0-SNAPSHOT (TO BE 6.0.0-BETA2) WHICH COMES WITH BETTER INTEGRATION WITH ATMOSPHERE 0.9.X+
+
 Experiements with https://github.com/jfarcand/atmosphere/tree/master/samples/wicket-clock/.
